gitignore angepasst weil mac manchmal komische mac only sachen generiert im ordner

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,13 @@ ENV/
 env.bak/
 venv.bak/
 
+# Project specific
+*.html
+.DS_Store
+.env.local
+credentials.json
+openrouter_key.txt
+
 # Spyder project settings
 .spyderproject
 .spyproject
