--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
 jiter==0.9.0
+mypy==1.15.0
+mypy-extensions==1.0.0
 openai==1.73.0
 pydantic==2.11.3
 pydantic_core==2.33.1
@@ -17,6 +19,9 @@ sniffio==1.3.1
 soupsieve==2.6
 toolz==1.0.0
 tqdm==4.67.1
+types-beautifulsoup4==4.12.0.20250204
+types-html5lib==1.1.11.20241018
+types-requests==2.32.0.20250328
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
