--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,20 @@ h11==0.14.0
 httpcore==1.0.8
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 jiter==0.9.0
 mypy==1.15.0
 mypy-extensions==1.0.0
 openai==1.73.0
+packaging==24.2
+pluggy==1.5.0
 pydantic==2.11.3
 pydantic_core==2.33.1
+pytest==8.3.5
 requests==2.32.3
 sniffio==1.3.1
 soupsieve==2.6
+tariff==1.0.0
 toolz==1.0.0
 tqdm==4.67.1
 types-beautifulsoup4==4.12.0.20250204
