--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ packaging==24.2
 pluggy==1.5.0
 pydantic==2.11.3
 pydantic_core==2.33.1
+pyside6==6.9.0
 pytest==8.3.5
 requests==2.32.3
 sniffio==1.3.1
